--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-08  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-edit-string): Assign major mode text-mode to the
+	subedit buffer.
+	Reported by Kenichi Handa <handa@m17n.org>.
+
 2010-03-28  Bruno Haible  <bruno@clisp.org>
 
 	* gettexize.in: Warn about use of --intl option.
