--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-08  Bruno Haible  <bruno@clisp.org>
+
+	po-mode: Fix po-msgid-to-msgstr on plural entries.
+	* po-mode.el (po-get-msgid_plural): New function.
+	(po-msgid-to-msgstr): Use it.
+
 2010-05-08  Noritada Kobayashi  <nori1@dolphin.c.u-tokyo.ac.jp>
             Bruno Haible  <bruno@clisp.org>
 
