--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-08  Bruno Haible  <bruno@clisp.org>
+
+	* NEWS: Mention the PO mode changes.
+
 2010-04-02  Bruno Haible  <bruno@clisp.org>
 
 	Remove autoconf-lib-link directory, obsoleted by gnulib.
