--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-08  Bruno Haible  <bruno@clisp.org>
+
+	* config.charset: Update comments for Cygwin 1.7.
+	* localcharset.c: Likewise.
+
 2010-04-24  Bruno Haible  <bruno@clisp.org>
 
 	vasnprintf: Correct errno value in case of out-of-memory.
