--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* version.sh: Bump to 0.18.
+	* windows/gettext.rc: Update year.
+
 2010-05-08  Bruno Haible  <bruno@clisp.org>
 
 	* NEWS: Mention the PO mode changes.
