--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h.in (LIBGETTEXTPO_VERSION): Bump version number.
+	* Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 5:0:5.
+	* libgettextpo.rc: Update year.
+
 2009-12-26  Bruno Haible  <bruno@clisp.org>
 
 	* libgettextpo.rc: Update.
