--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,10 @@
+2010-04-03  Bruno Haible  <bruno@clisp.org>
+
+	localename: Port to MacOS X 10.6.
+	* localename.c (gl_locale_name_thread_unsafe): On MacOS X, try the
+	memory layout of the locales in MacOS X 10.6 as well.
+	Reported by Panu Kekäläinen <panu@kekalainen.eu>.
+
 2010-05-08  Bruno Haible  <bruno@clisp.org>
 
 	* config.charset: Update comments for Cygwin 1.7.
