--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	vasnprintf: Fix syntax errors in libintl build on mingw.
+	* vasnprintf.c (VASNPRINTF): Move a closing brace. Undefine
+	pad_ourselves and prec_ourselves after use.
+
 2010-04-24  Bruno Haible  <bruno@clisp.org>
 
 	vasnprintf: Correct errno value in case of out-of-memory.
