--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	Export rpl_optind, rpl_optarg from DLL depending on platform.
+	* configure.ac (GETTEXTLIB_EXPORTS_FLAGS): New substituted variable.
+	* woe32dll/gettextlib-exports.c (rpl_optarg, rpl_optind): Export only
+	if GNULIB_DEFINED_GETOPT is set.
+
 2010-04-02  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): Remove "-I ../autoconf-lib-link/m4"
