--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	Avoid test suite failures on Cygwin 1.7.
+	* lang-c++: Link without the -Wl,--disable-auto-import option.
+	* lang-clisp: Convert CR/LF to LF before applying DIFF.
+	* lang-tcl: Likewise.
+
 2010-04-25  Bruno Haible  <bruno@clisp.org>
 
 	Update support of object-pascal-format strings.
