--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	* version.sh: Bump to 0.18.
 	* windows/gettext.rc: Update year.
 	* autogen.sh: Record the gnulib version that is being used.
