--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	* libgnuintl.h.in (LIBINTL_VERSION): Bump to 0.18.
 	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 9:0:1.
 	* libintl.rc: Update year.
