--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	vasnprintf: Fix syntax errors in libintl build on mingw.
 	* vasnprintf.c (VASNPRINTF): Move a closing brace. Undefine
 	pad_ourselves and prec_ourselves after use.
