--- a/gettext-runtime/man/ChangeLog
+++ b/gettext-runtime/man/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18 released.
+
 2009-05-21  Bruno Haible  <bruno@clisp.org>
 
 	Fix installation name of manual pages when --program-prefix is used.
