--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	* Makefile.in.in (GETTEXT_MACRO_VERSION): Bump to 0.18.
 
 2010-02-07  Bruno Haible  <bruno@clisp.org>
