--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	Export rpl_optind, rpl_optarg from DLL depending on platform.
 	* configure.ac (GETTEXTLIB_EXPORTS_FLAGS): New substituted variable.
 	* woe32dll/gettextlib-exports.c (rpl_optarg, rpl_optind): Export only
