--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18 released.
+
 2010-04-25  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (object-pascal-format): Add reference to Free Pascal
