--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18 released.
+
 2010-04-25  Bruno Haible  <bruno@clisp.org>
 
 	Update hello-pascal example.
