--- a/gettext-tools/styles/ChangeLog
+++ b/gettext-tools/styles/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18 released.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
