--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	Avoid test suite failures on Cygwin 1.7.
 	* lang-c++: Link without the -Wl,--disable-auto-import option.
 	* lang-clisp: Convert CR/LF to LF before applying DIFF.
