--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.18 released.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	Avoid test suite failure on mingw.
 	* tests/test-term-ostream-xterm: Convert CR/LF to LF before comparing.
 
