--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -4,6 +4,10 @@
 
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
+	* autopoint.in: Update for 0.18.
+
+2010-05-09  Bruno Haible  <bruno@clisp.org>
+
 	* autopoint.in (func_version): Bump copyright year.
 
 2010-05-08  Bruno Haible  <bruno@clisp.org>
