--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* libgnuintl.h.in (printf): Add comment.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
