--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* convert-archive.in: Remove known 'rlog' warning from error output.
+	(func_version): Update copyright years.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
