--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,11 @@
 2010-05-16  Bruno Haible  <bruno@clisp.org>
 
+	Make convert-archive more robust.
+	* convert-archive.in: Report a fatal error in many error conditions.
+	Reported by Santiago Vila <sanvila@unex.es>.
+
+2010-05-16  Bruno Haible  <bruno@clisp.org>
+
 	* convert-archive.in: Remove known 'rlog' warning from error output.
 	(func_version): Update copyright years.
 
