Avoid autoconf warnings about AM_ICONV.

--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-16  Bruno Haible  <bruno@clisp.org>
+
+	Avoid autoconf warnings about AM_ICONV.
+	* iconv.m4 (AM_ICONV): Define using AM_DEFUN_ONCE for autoconf >= 2.64.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
