--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2010-05-18  Bruno Haible  <bruno@clisp.org>
+
+	Correct program dependencies.
+	* Makefile.am (OTHERPROGDEPENDENCIES): New variable.
+	(recode_sr_latin_LDADD): Remove redundant variable.
+	(recode_sr_latin_DEPENDENCIES): Use OTHERPROGDEPENDENCIES.
+	(hostname_DEPENDENCIES, urlget_DEPENDENCIES): New variables.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
