--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-20  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a link error when building statically on mingw.
+	* gettextP.h (gl_locale_name_thread): Alias to _nl_locale_name_thread.
+	Reported by Rob <sisyphus1@optusnet.com.au>.
+
 2010-05-16  Bruno Haible  <bruno@clisp.org>
 
 	* libgnuintl.h.in (printf): Add comment.
