--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2010-05-20  Bruno Haible  <bruno@clisp.org>
 
+	* gettextP.h (_nl_locale_name): Comment out declaration.
+
+2010-05-20  Bruno Haible  <bruno@clisp.org>
+
 	Avoid a link error when building statically on mingw.
 	* gettextP.h (gl_locale_name_thread): Alias to _nl_locale_name_thread.
 	Reported by Rob <sisyphus1@optusnet.com.au>.
