--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-20  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (objc-format): Fix typo.
+	Reported by Kalle Olavi Niemitalo <kon@iki.fi>.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
