--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-22  Bruno Haible  <bruno@clisp.org>
+
+	* README.woe32: Explain how to build 64-bit mode binaries.
+	Reported by Rob <sisyphus1@optusnet.com.au>.
+
 2010-05-24  Bruno Haible  <bruno@clisp.org>
 
 	Use the newest regex module from gnulib.
