--- a/gettext-tools/libgrep/ChangeLog
+++ b/gettext-tools/libgrep/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-23  Bruno Haible  <bruno@clisp.org>
+
+	msggrep: Fix interpretation of '$' in regular expressions.
+	* m-regex.c (EGexecute): When searching up to the end of a string that
+	does not end in a newline, set not_eol to 0.
+	Reported by Sean Flanigan <sflaniga@redhat.com>.
+
 2010-05-24  Bruno Haible  <bruno@clisp.org>
 
 	* m-fgrep.c: Untabify.
