--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-05-24  Bruno Haible  <bruno@clisp.org>
+
+	Use the newest regex module from gnulib.
+	* autogen.sh: Add another gnulib-tool invocation for libgrep.
+	(GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): New variable.
+	(GNULIB_MODULES_TOOLS_FOR_LIBGREP): Change value.
+	Pass option -I libgrep/gnulib-m4 to 'aclocal'.
+	* Makefile.am (distcheck-hook): Don't compare memchr.c.
+
 2010-05-23  Bruno Haible  <bruno@clisp.org>
 
 	Do regex matching purely with regex, not regex + dfa + kwset.
