--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-24  Bruno Haible  <bruno@clisp.org>
+
+	Use the newest regex module from gnulib.
+	* libgrep.m4: Remove file.
+	* regex.m4: Remove file.
+	* Makefile.am (EXTRA_DIST): Remove them.
+
 2010-05-23  Bruno Haible  <bruno@clisp.org>
 
 	Do regex matching purely with regex, not regex + dfa + kwset.
